dev/soludev/logto/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logto
  namespace: soludev
  labels:
    app: logto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logto
  template:
    metadata:
      labels:
        app: logto
        app.kubernetes.io/part-of: soludev-workload
    spec:
      containers:
        - name: logto
          image: svhd/logto:1.38.0
          command: 
            - "sh"
            - "-c"
            - |
              npm run cli db seed -- --swe
              npm run cli db alteration deploy v1.38.0
              exec npm start
          ports:
            - containerPort: 3002
            - containerPort: 3001
          startupProbe:
            httpGet:
              path: /api/status
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /api/status
              port: 3001
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/status
              port: 3001
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              memory: "512Mi"
              cpu: "1000m"
            limits:
              memory: "2Gi"
