dev/soludev/logto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logto
  namespace: soludev
  labels:
    app: logto
spec:
  type: ClusterIP
  selector:
    app: logto
  ports:
    - name: http-main
      port: 3001
      targetPort: 3001
      protocol: TCP
    - name: http-admin
      port: 3002
      targetPort: 3002
      protocol: TCP
